--- a/internet tech/css/style.css
+++ b/internet tech/css/style.css
@@ -30,18 +30,18 @@ body {
 }
 
 /* TABLET */
-/* @media (max-width: 991.98px) {
+@media (max-width: 991.98px) {
     [class*="__container"] {
         max-width: 767.98px;
     }
-} */
+}
 
 /* MOBILE */
-/* @media (max-width: 767.98px) {
+@media (max-width: 767.98px) {
     [class*="__container"] {
         max-width: none;
     }
-} */
+}
 
 
 
